--- a/README.Rmd
+++ b/README.Rmd
@@ -22,7 +22,7 @@ knitr::opts_chunk$set(
 [![R build status](https://github.com/lifebit-ai/cloudos/workflows/R-CMD-check/badge.svg)](https://github.com/lifebit-ai/cloudos/actions)
 <!-- badges: end -->
 
-**cloudos** R package makes it easy to interact with Lifebit's CloudOS <https://cloudos.lifebit.ai/> platform in an R environment.
+**cloudos** R package makes it easy to interact with Lifebit's CloudOS platform in an R environment.
 
 ## Installation
 
@@ -312,7 +312,7 @@ cohort_genotype %>% head(n=2) %>% kable()
 
 ## Additional notes
 
-This package is under activate development. If you find any issues, please reach out here - https://github.com/lifebit-ai/cloudos/issues 
+This package is under active development. If you find any issues, please reach out here - https://github.com/lifebit-ai/cloudos/issues 
 
 For documentation visit - https://lifebit-ai.github.io/cloudos/ 
 
